@@ -4,6 +4,7 @@ import com.filiptomanec.shiftcalendarbe.token.TokenResponse;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,6 +15,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -22,28 +24,15 @@ import java.util.List;
 public class UserController {
 
 	private final UserService userService;
+	private final ModelMapper modelMapper;
 
 	@GetMapping
 	@Operation(summary = "Returns all users.")
 	public ResponseEntity<List<UserResponse>> getAllUsers() {
 		List<User> users = userService.findAllUsers();
-		List<UserResponse> userResponses = users.stream().map(user -> {
-			UserResponse userResponse = new UserResponse();
-			userResponse.setId(user.getId());
-			userResponse.setUsername(user.getUserName());
-			userResponse.setEmail(user.getEmail());
-			userResponse.setTokens(user.getTokens().stream().map(token -> {
-				TokenResponse tokenResponse = new TokenResponse();
-				tokenResponse.setId(token.getId());
-				tokenResponse.setToken(token.getToken());
-				tokenResponse.setRevoked(token.isRevoked());
-				tokenResponse.setExpired(token.isExpired());
-				tokenResponse.setUserId(token.getUser().getId());
-				return tokenResponse;
-			}).toList());
-			return userResponse;
-		}).toList();
-		return ResponseEntity.ok(userResponses);
+		return ResponseEntity.ok(users.stream()
+		                              .map(user -> modelMapper.map(user, UserResponse.class))
+		                              .collect(Collectors.toList()));
 	}
 
 	@GetMapping("/{id}")
